[gd_scene load_steps=6 format=3 uid="uid://cuxgy6siierjg"]

[ext_resource type="Script" uid="uid://1dxdas2un18v" path="res://screens/puzzle_editor/puzzle_editor.gd" id="1_pbx64"]
[ext_resource type="PackedScene" uid="uid://dokrrfb2rfisg" path="res://screens/game/grid/grid.tscn" id="2_ajwto"]
[ext_resource type="PackedScene" uid="uid://c43y5ruhaatip" path="res://screens/puzzle_editor/Widgets/Rotator.tscn" id="2_iyvlx"]
[ext_resource type="Script" uid="uid://cu84ydqg74gso" path="res://screens/game/camera_2d.gd" id="3_ajwto"]
[ext_resource type="Texture2D" uid="uid://dxu06wcr35n26" path="res://assets/textures/spritesheet_robotsTop.png" id="5_raffu"]

[node name="PuzzleEditor" type="Node2D"]
script = ExtResource("1_pbx64")

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceLayer"]
offset_left = 26.0
offset_top = 21.0
offset_right = 261.0
offset_bottom = 109.0

[node name="SaveButton" type="Button" parent="InterfaceLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Save Puzzle"

[node name="TestButton" type="Button" parent="InterfaceLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Test Puzzle
"

[node name="HSeparator" type="HSeparator" parent="InterfaceLayer/VBoxContainer"]
layout_mode = 2

[node name="PlanetName" type="LineEdit" parent="InterfaceLayer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Planet Name"

[node name="GridWidth" parent="InterfaceLayer/VBoxContainer" instance=ExtResource("2_iyvlx")]
layout_mode = 2
size_flags_vertical = 3
label = "Grid Width"
min_value = 1
max_value = 50

[node name="GridHeight" parent="InterfaceLayer/VBoxContainer" instance=ExtResource("2_iyvlx")]
layout_mode = 2
size_flags_vertical = 3
label = "Grid Height"
min_value = 1
max_value = 50

[node name="Difficulty" parent="InterfaceLayer/VBoxContainer" instance=ExtResource("2_iyvlx")]
layout_mode = 2
size_flags_vertical = 3
label = "Difficulty"
min_value = 1
max_value = 50

[node name="TimeUntilHumans" parent="InterfaceLayer/VBoxContainer" instance=ExtResource("2_iyvlx")]
layout_mode = 2
size_flags_vertical = 3
label = "Time To Humans"
min_value = 100
max_value = 2000
increment = 100

[node name="TileOptionsContainer" type="VBoxContainer" parent="InterfaceLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -295.0
offset_top = 24.0
offset_right = -30.0
offset_bottom = 635.0
grow_horizontal = 0

[node name="TileGrid" type="GridContainer" parent="InterfaceLayer/TileOptionsContainer"]
layout_mode = 2

[node name="IsPlayer" type="CheckButton" parent="InterfaceLayer/TileOptionsContainer"]
layout_mode = 2
text = "Player Here"

[node name="Grid" parent="." instance=ExtResource("2_ajwto")]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("3_ajwto")

[node name="PlayerLocation" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_raffu")
region_enabled = true
region_rect = Rect2(0, 0, 150, 156)

[connection signal="pressed" from="InterfaceLayer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="InterfaceLayer/VBoxContainer/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="text_submitted" from="InterfaceLayer/VBoxContainer/PlanetName" to="." method="_on_planet_name_text_submitted"]
[connection signal="on_value_changed" from="InterfaceLayer/VBoxContainer/GridWidth" to="." method="_on_grid_width_value_changed"]
[connection signal="on_value_changed" from="InterfaceLayer/VBoxContainer/GridHeight" to="." method="_on_grid_height_value_changed"]
[connection signal="on_value_changed" from="InterfaceLayer/VBoxContainer/Difficulty" to="." method="_on_difficulty_value_changed"]
[connection signal="on_value_changed" from="InterfaceLayer/VBoxContainer/TimeUntilHumans" to="." method="_on_time_until_humans_value_changed"]
[connection signal="toggled" from="InterfaceLayer/TileOptionsContainer/IsPlayer" to="." method="_on_is_player_toggled"]
